
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "system_sound"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
serde       = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc  = "0.2.7"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
